Issue #16: Interim commit.

--- a/src/templates/css/index.template.css
+++ b/src/templates/css/index.template.css
@@ -50,3 +50,12 @@ html, body {
 	width: 550px;
 	height: 550px;
 }
+
+#stackContainer {
+    border: 1px solid #ccc;
+    margin-top: 10px;
+}
+
+#stackContainer div {
+    padding: 5px;
+}
