(Issue #16) :  Improve HTML output Interim commit.

--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -347,7 +347,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	<div id="nav_pane" class="edgePanel" data-dojo-type="dijit/layout/ContentPane"
 		data-dojo-props="region: 'left', splitter: true">
 		Sidebar content (left)
-		<!-- Div for the tree -->
+		<!-- Div for the tree control in the nav pane -->
 		<div id="my_tree"></div>
 	</div>
 </div>
